# concurrency-benchmarks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  main.ipynb  main.py  meson.build  meson_options.txt  nilvec.py  plot.py  plot_results.py  pyproject.toml  test_import.py
.git-hooks/: README.md  ai-commit-msg
.github/: copilot-instructions.md
.github/workflows/: pytest.yml
.zed/: settings.json
design/: AGENTS.md  DIMENSION.md  HYBRID.md  TESTS.md
nilvec/: __init__.py  __init__.pyi  _nilvec.pyi  benchmark.py  benchmarks.py  cli.py  config.py  datasets.py  external_indexes.py  formatting.py  metrics.py  params.py  store.py
paper/: citations.bib  hnsw_viz.py  nilvec.typ  voronoi.py  vv.py
plotting/: __init__.py  benchmark_plots.py  hnsw_viz.py  style.py  voronoi.py
src/: common.hpp  dataset.hpp  flat_vanilla.hpp  hnsw_coarse_optimistic.hpp  hnsw_coarse_pessimistic.hpp  hnsw_fine_optimistic.hpp  hnsw_fine_pessimistic.hpp  hnsw_params.hpp  hnsw_vanilla.hpp  hnswivf_coarse_pessimistic.hpp  hybrid_optimistic.hpp  hybrid_pessimistic.hpp  ivf_params.hpp  ivfflat_coarse_optimistic.hpp  ivfflat_coarse_pessimistic.hpp  ivfflat_fine_optimistic.hpp  ivfflat_fine_pessimistic.hpp  ivfflat_vanilla.hpp  python_bindings.cpp  quantization.hpp
test/: conftest.py  test_bindings.py  test_cli.py  test_config.py  test_datasets.py  test_disjoint_rates.py  test_formatting.py  test_gil_release.py  test_metrics.py  test_parallelism.py  test_store.py
