option('track_conflicts', type: 'boolean', value: true, description: 'Enable conflict tracking for optimistic implementations')
option('use_hdf5', type: 'boolean', value: true, description: 'Enable HDF5 support for loading standard ANN benchmark datasets')
option('python_bindings', type: 'boolean', value: true, description: 'Build Python bindings for the nilvec package')
