[project]
name = "nilvec"
version = "0.1.0"
description = "Concurrent Vector Index Implementations for ANN Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "requests",
    "usearch",
]

[build-system]
requires = ["meson-python", "ninja", "pybind11>=2.6"]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ["-Duse_hdf5=true"]

[tool.uv]
reinstall-package = ["nilvec"]

[dependency-groups]
dev = [
    "pybind11>=3.0.1",
]

[tool.uv.sources]
nilvec = { path = ".", editable = true }