[project]
name = "nilvec"
version = "0.1.0"
description = "Concurrent Vector Index Implementations for ANN Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "h5py>=3.8",
    "requests>=2.31",
    "colorama>=0.4",
    "duckdb>=0.9",
    "pytest>=9.0.2",
    "faiss-cpu>=1.7",
    "usearch>=2.9",
    "pymilvus>=2.3",
    "milvus-lite>=2.3",
    "weaviate-client>=4.5",
    "redis>=5.0",
    "scipy>=1.17.1",
    "hnswlib>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "pybind11>=3.0.1",
]
full = [
    "nilvec[dev]",
]

[build-system]
requires = ["meson-python", "ninja", "pybind11>=2.6"]
build-backend = "mesonpy"


[tool.pytest.ini_options]
testpaths = ["test"]

[tool.uv]
reinstall-package = ["nilvec"]

[tool.uv.sources]
nilvec = { path = ".", editable = true }

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
include = ["test", "src", "paper"]
exclude = ["**/node_modules", "**/__pycache__", "builddir"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]
